Make onboarding status bar transparent to avoid updating its color

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -18,12 +18,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/brickOrange" />
+        android:fitsSystemWindows="true"
+        tools:background="@color/brickOrange" />
 
 </android.support.design.widget.CoordinatorLayout>
