Increase touch area for the notification banner's dismiss button

--- a/app/src/main/res/layout/include_banner_notification.xml
+++ b/app/src/main/res/layout/include_banner_notification.xml
@@ -89,16 +89,16 @@
 
         <ImageView
             android:id="@+id/dismissBannerButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_width="62dp"
+            android:layout_height="0dp"
+            android:scaleType="center"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/notificationDefaultBrowserDismissButton"
             android:src="@drawable/ic_close_white_24dp"
             android:tint="@color/powderBlue2"
-            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/topGuideline" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
