Feature/default browser (#268)
* Integrate new onboarding screen for default browser (WIP)

The color transition between screens still isn't perfect; it works unless you switch directions mid-swipe and then it goes a bit awry. Will fix soon.

* Add default browser switch into settings

* Fix tests

* Add default browser detector and wire into settings and onboarding

* Stop untoggling the default browser toggle; UX works better to allow it

It will correct itself if necessary when the user returns from the settings screen.

* Add default browser banner, timed to show after certain delay

* Change to 8dp corner radius on default app info activity

* Wire in default browser info activity

* Restore missing string removed in a refactor

* Remove developer hacks to show notification banner

* Fix color transition on onboarding pages

* Make onboarding status bar transparent to avoid updating its color

* Tidy up logic whether to show onboarding / home screens

Home is always shown, so we might as well remove the cycle of starting onboarding, waiting for it to finish, checking the request code in onActivityResult, calling back to viewModel, then waiting for a new command to be observed instructing us to launch home.

* Code formatting

* Remove redundant class

* Remove suspected flaky test

* Only show default browser UI when variant supports it

* Remove noisy log statement

* Code formatting

* Add some tests for the defined variants

* Code formatting as per PR feedback observations

* More travis experimentation

* Store ATB separately from variant

* Revert "Remove suspected flaky test"

This reverts commit 1c4fd6076b99e8a115e45183353efac8d2c4cf0a.

* Store ATB separately from variant and fix code formatting

* Correct stored ATB if it still has the old app's format

Previously, MA was hardcoded on the end of the ATB param. We no longer want this functionality, so we'll need to check for previously stored 

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,20 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
+        <item name="android:windowActivityTransitions">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/translucentDark</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
 
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="colorControlNormal">@color/grayish</item>
@@ -192,12 +201,26 @@
 
     </style>
 
+    <style name="AppTheme.TransparentTheme" >
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
+
     <style name="OnboardingButtonProtectData" parent="OnboardingButtonStyle">
         <item name="colorAccent">@color/muddyGreen</item>
     </style>
 
     <style name="OnboardingButtonNoTrace" parent="OnboardingButtonStyle">
         <item name="colorAccent">@color/windowsBlue</item>
+    </style>
+
+    <style name="OnboardingButtonDefaultBrowser" parent="OnboardingButtonStyle">
+        <item name="colorAccent">@color/portGore</item>
+    </style>
+
+    <style name="OnboardingButtonDefaultBrowserLaunchSettings" parent="OnboardingButtonStyle">
+        <item name="colorAccent">@color/eastSide</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="OnboardingTextTitle">
@@ -227,7 +250,5 @@
         <item name="android:paddingTop">16dp</item>
         <item name="android:lineSpacingExtra">6sp</item>
     </style>
-
-
 
 </resources>
