--- a/app/src/main/res/layout/content_onboarding_protect_data.xml
+++ b/app/src/main/res/layout/content_onboarding_protect_data.xml
@@ -21,8 +21,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingEnd="44dp"
+    android:tag="onboardingProtect"
     android:paddingStart="44dp"
-    tools:background="@color/lighOliveGreen"
+    tools:background="@color/lightOliveGreen"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <ImageView
