Add feedback activity

--- a/app/src/main/res/layout-land/activity_default_browser_info.xml
+++ b/app/src/main/res/layout-land/activity_default_browser_info.xml
@@ -28,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/notification_info_top_background"
-        android:elevation="@dimen/defaultBrowserInfoCardTitleElevation"
+        android:elevation="@dimen/modalCardHeaderElevation"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/description"
@@ -41,9 +41,9 @@
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:layout_marginTop="30dp"
-        android:elevation="@dimen/defaultBrowserInfoCardTitleElevation"
+        android:elevation="@dimen/modalCardHeaderElevation"
         android:importantForAccessibility="no"
-        android:src="@drawable/ic_icon_smiley_face"
+        android:src="@drawable/icon_smiley_face"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,10 +52,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:elevation="@dimen/defaultBrowserInfoCardTitleElevation"
+        android:elevation="@dimen/modalCardHeaderElevation"
         android:text="@string/defaultBrowserInfoTitle"
         android:textColor="@color/white"
-        android:textSize="@dimen/defaultBrowserInfoTitleTextSize"
+        android:textSize="@dimen/modalCardTitleTextSize"
         app:layout_constraintEnd_toStartOf="@id/textEndVerticalGuideline"
         app:layout_constraintStart_toStartOf="@id/textStartVerticalGuideline"
         app:layout_constraintTop_toBottomOf="@id/smileyFace" />
@@ -66,11 +66,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="38dp"
         android:layout_marginTop="6dp"
-        android:elevation="@dimen/defaultBrowserInfoCardTitleElevation"
+        android:elevation="@dimen/modalCardHeaderElevation"
         android:paddingBottom="30dp"
         android:text="@string/defaultBrowserInfoMessage"
         android:textColor="@color/white"
-        android:textSize="@dimen/defaultBrowserInfoDescriptionTextSize"
+        android:textSize="@dimen/modalCardDescriptionTextSize"
         app:layout_constraintEnd_toStartOf="@id/textEndVerticalGuideline"
         app:layout_constraintStart_toStartOf="@id/textStartVerticalGuideline"
         app:layout_constraintTop_toBottomOf="@id/title" />
@@ -111,7 +111,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
-        android:background="@color/softBlue"
+        android:background="@color/cornflowerBlue"
         android:text="@string/onboardingDefaultBrowserGoToSettingsAction"
         android:textColor="@color/white"
         android:transitionName="defaultBrowserBannerTransition"
