--- a/app/src/main/res/drawable/notification_info_top_background.xml
+++ b/app/src/main/res/drawable/notification_info_top_background.xml
@@ -15,10 +15,10 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/softBlue" />
+    <solid android:color="@color/cornflowerBlue" />
     <stroke
         android:width="1dp"
-        android:color="@color/softBlue" />
+        android:color="@color/cornflowerBlue" />
     <corners
         android:topLeftRadius="8dp"
         android:topRightRadius="8dp" />
