--- a/app/src/main/res/layout/include_banner_notification.xml
+++ b/app/src/main/res/layout/include_banner_notification.xml
@@ -25,7 +25,7 @@
         android:id="@+id/bannerNotification"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/softBlue"
+        android:background="@color/cornflowerBlue"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:transitionName="defaultBrowserBannerTransition"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_icon_smiley_face"
+            android:src="@drawable/icon_smiley_face"
             app:layout_constraintBottom_toBottomOf="@id/title"
             app:layout_constraintStart_toEndOf="@id/leftGuideline"
             app:layout_constraintTop_toBottomOf="@id/topGuideline"
