Ensure full screen webView container covers all other UI elements

--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -25,6 +25,18 @@
 
     <include layout="@layout/include_omnibar_toolbar" />
 
+    <FrameLayout
+        android:id="@+id/webViewFullScreenContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/windowBackground"
+        android:elevation="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/logoParent"
         android:layout_width="match_parent"
@@ -77,17 +89,6 @@
             tools:itemCount="3"
             tools:listitem="@layout/item_autocomplete_suggestion"
             tools:visibility="gone" />
-
-        <FrameLayout
-            android:id="@+id/webViewFullScreenContainer"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/windowBackground"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/focusDummy"
