Bug Fix, clean up code, restore two files that weren't supposed to be deleted

--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -32,7 +32,8 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|enterAlways">
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:id="@+id/clay">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
