--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -108,25 +108,6 @@
                 app:layout_constraintTop_toBottomOf="@id/description"
                 tools:checked="true" />
 
-            <TextView
-                android:id="@+id/brokenSiteConfirmation"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center_horizontal"
-                android:lineSpacingExtra="5sp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="@string/feedbackDomainAdded"
-                android:textColor="@color/mediumGreen"
-                android:textSize="14sp"
-                android:textStyle="normal"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/brokenSiteSwitch"
-                app:layout_goneMarginBottom="6dp" />
 
             <EditText
                 android:id="@+id/brokenSiteUrl"
@@ -138,7 +119,7 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/brokenSiteConfirmation" />
+                app:layout_constraintTop_toBottomOf="@id/brokenSiteSwitch" />
 
             <EditText
                 android:id="@+id/feedbackMessage"
