Improve text flow

--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -98,11 +98,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/feedbackFormFieldsMargin"
                 android:fontFamily="sans-serif-medium"
+                android:paddingStart="3dp"
                 android:text="@string/feedbackReportBrokenSite"
                 android:textColor="@color/warmerGray"
                 android:textSize="@dimen/modalCardSwitchTextSize"
                 android:textStyle="normal"
-                android:paddingStart="3dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/description"
@@ -116,6 +116,7 @@
                 android:hint="@string/feedbackUrlHint"
                 android:imeOptions="flagNoExtractUi"
                 android:lineSpacingExtra="5sp"
+                android:singleLine="true"
                 android:minHeight="46dp"
                 android:paddingBottom="16dp"
                 android:paddingTop="16dp"
@@ -132,6 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/feedbackFormFieldsMargin"
                 android:hint="@string/feedbackMessageHint"
+                android:imeOptions="flagNoExtractUi"
                 android:lineSpacingExtra="5sp"
                 android:minHeight="96dp"
                 android:paddingBottom="16dp"
