--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -99,6 +99,7 @@
                 android:layout_margin="@dimen/feedbackFormFieldsMargin"
                 android:fontFamily="sans-serif-medium"
                 android:paddingStart="3dp"
+                android:paddingEnd="0dp"
                 android:text="@string/feedbackReportBrokenSite"
                 android:textColor="@color/warmerGray"
                 android:textSize="@dimen/modalCardSwitchTextSize"
@@ -118,6 +119,7 @@
                 android:lineSpacingExtra="5sp"
                 android:singleLine="true"
                 android:minHeight="46dp"
+                android:inputType="textUri"
                 android:paddingBottom="16dp"
                 android:paddingTop="16dp"
                 android:textSize="@dimen/modalCardEditTextSize"
@@ -135,6 +137,7 @@
                 android:imeOptions="flagNoExtractUi"
                 android:lineSpacingExtra="5sp"
                 android:minHeight="96dp"
+                android:inputType="text"
                 android:paddingBottom="16dp"
                 android:paddingTop="16dp"
                 android:textSize="@dimen/modalCardEditTextSize"
