--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -101,7 +101,7 @@
             <TextView
                 android:id="@+id/findInPageMenuItem"
                 style="@style/BrowserTextMenuItem"
-                android:text="@string/find_in_page" />
+                android:text="@string/findInPageMenuTitle" />
 
             <CheckBox
                 android:id="@+id/requestDesktopSiteCheckMenuItem"
