--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -116,17 +116,16 @@
                 android:layout_margin="@dimen/feedbackFormFieldsMargin"
                 android:hint="@string/feedbackUrlHint"
                 android:imeOptions="flagNoExtractUi"
-                android:lineSpacingExtra="5sp"
-                android:singleLine="true"
-                android:minHeight="46dp"
                 android:inputType="textUri"
                 android:paddingBottom="16dp"
                 android:paddingTop="16dp"
+                android:singleLine="true"
                 android:textSize="@dimen/modalCardEditTextSize"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/brokenSiteSwitch" />
+                app:layout_constraintTop_toBottomOf="@id/brokenSiteSwitch"
+                tools:visibility="visible" />
 
             <EditText
                 android:id="@+id/feedbackMessage"
@@ -135,10 +134,9 @@
                 android:layout_margin="@dimen/feedbackFormFieldsMargin"
                 android:hint="@string/feedbackMessageHint"
                 android:imeOptions="flagNoExtractUi"
-                android:lineSpacingExtra="5sp"
-                android:minHeight="96dp"
                 android:inputType="textMultiLine"
-                android:paddingBottom="16dp"
+                android:lineSpacingExtra="5sp"
+                android:paddingBottom="24dp"
                 android:paddingTop="16dp"
                 android:textSize="@dimen/modalCardEditTextSize"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +150,7 @@
                 android:layout_marginBottom="30dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/modal_card_button_bg"
                 android:text="@string/feedbackSubmitButton"
                 android:textColor="@color/white"
