Add feedback and broken site forms (#294)
• Replace website with modal feedback form in settings
• Add broken site form to browser
• Switch to cornflower blue globally for modal card layout backgrounds

--- a/app/src/main/res/layout/popup_window_browser_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_menu.xml
@@ -101,7 +101,7 @@
             <TextView
                 android:id="@+id/findInPageMenuItem"
                 style="@style/BrowserTextMenuItem"
-                android:text="@string/find_in_page" />
+                android:text="@string/findInPageMenuTitle" />
 
             <CheckBox
                 android:id="@+id/requestDesktopSiteCheckMenuItem"
@@ -115,6 +115,11 @@
                 android:text="@string/requestDesktopSiteMenuTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/brokenSitePopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:text="@string/feedbackReportBrokenSiteMenuItem" />
 
             <TextView
                 android:id="@+id/settingsPopupMenuItem"
