--- a/app/src/main/res/drawable/modal_card_button_bg.xml
+++ b/app/src/main/res/drawable/modal_card_button_bg.xml
@@ -15,11 +15,10 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/cornflowerBlue" />
+    <solid android:color="@color/modal_card_button_background" />
     <stroke
         android:width="1dp"
-        android:color="@color/cornflowerBlue" />
+        android:color="@color/modal_card_button_background" />
     <corners
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
+        android:radius="3dp"/>
 </shape>
