--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
@@ -14,11 +16,8 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/softBlue" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/softBlue" />
-    <corners
-        android:radius="3dp"/>
-</shape>
+<resources>
+
+    <dimen name="feedbackCardHorizontalMargin">96dp</dimen>
+
+</resources>
