--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -21,7 +21,15 @@
     <dimen name="onboardingButtonPadding">30dp</dimen>
     <dimen name="onboardingTitleTextSize">32sp</dimen>
     <dimen name="onboardingSubtitleTextSize">20sp</dimen>
-    <dimen name="defaultBrowserInfoTitleTextSize">30sp</dimen>
-    <dimen name="defaultBrowserInfoDescriptionTextSize">20sp</dimen>
-    <dimen name="defaultBrowserInfoSettingsButtonTextSize">20sp</dimen>
+
+    <dimen name="modalCardTitleTextSize">30sp</dimen>
+    <dimen name="modalCardDescriptionTextSize">20sp</dimen>
+    <dimen name="modalCardSwitchTextSize">20sp</dimen>
+    <dimen name="modalCardEditTextSize">20sp</dimen>
+    <dimen name="modalCardMajorButtonTextSize">20sp</dimen>
+
+    <dimen name="feedbackCardVerticalMargin">32dp</dimen>
+    <dimen name="feedbackFormFieldsMargin">32dp</dimen>
+    <dimen name="feedbackCardHorizontalMargin">48dp</dimen>
+
 </resources>
