--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,7 +30,7 @@
 
     <color name="powderBlue">#50BFFF</color>
     <color name="powderBlue2">#B2D6F3</color>
-    <color name="windowsBlue">#3c90c0</color>
+    <color name="denimBlue">#3d5599</color>
     <color name="cornflowerBlue">#678FFF</color>
 
     <color name="lightOliveGreen">#93c04d</color>
